--- a/package.json
+++ b/package.json
@@ -9,15 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~53.0.22",
-    "expo-status-bar": "~2.2.3",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-navigation/bottom-tabs": "7.4.6",
+    "@react-navigation/native": "7.1.17",
+    "@react-navigation/stack": "7.4.7",
+    "expo": "53.0.22",
+    "expo-status-bar": "2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.6"
+    "react-native": "0.79.5",
+    "react-native-gesture-handler": "2.24.0",
+    "react-native-reanimated": "3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "4.11.1",
+    "uuid": "11.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
-    "typescript": "~5.8.3"
+    "@babel/core": "7.25.2",
+    "@types/react": "19.0.10",
+    "typescript": "5.8.3"
   },
   "private": true
 }
