--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "start": "expo start --localhost",
+    "android": "expo start --android --localhost",
+    "ios": "expo start --ios --localhost",
+    "web": "expo start --web --localhost"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.1.2",
